k8s/bes/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeName: bes
      containers:
        - name: bazarr
          image: linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            requests:
              memory: "64Mi"
            limits:
              memory: "256Mi"
      volumes:
        - name: config
          hostPath:
            path: /var/lib/k8s-state/bazarr
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /srv/media
