k8s/bes/bazarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    certResolver: letsencrypt
